--- a/src/core/welcome/welcome.scss
+++ b/src/core/welcome/welcome.scss
@@ -15,3 +15,14 @@
         font-style: oblique;
     }
 }
+.blob {
+  height: 50px;
+  width: 50px;
+  color: $infinityColor;
+  position: absolute;
+  top: 45%;
+  left: 45%;
+  z-index: 1;
+  font-size: 30px;
+   
+}
