--- a/src/components/dashboard/dashboard.html
+++ b/src/components/dashboard/dashboard.html
@@ -1,5 +1,70 @@
-
 <section class="dashboard">
-  
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/groupmemebrs.png" />
+                    <div class="card-body">
+                        <router-link to="/user">Add / Edit</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/sports.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Sports</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/charity.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Charity</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/committe.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Committe</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen mt-3">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/assets.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Total assets</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen mt-3">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/chart.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Club Chart</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen mt-3">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/addmember.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Add Members</router-link>
+                    </div>
+                </div>
+            </div>
+            <div class="col-12 col-sm-4 col-md-4 col-lg-3 smallscreen mt-3">
+                <div class="card">
+                    <img class="card-img-top" alt="members" src="@/assets/images/logout.png" />
+                    <div class="card-body">
+                        <router-link to="/members">Logout</router-link>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </section>
-
