--- a/src/core/login/login.scss
+++ b/src/core/login/login.scss
@@ -1,6 +1,6 @@
 .login-wrapper {
     height: 100%;
-    background-image: url(C:/Users/HP/Desktop/infinity/src/assets/images/login.png);
+    background-image: url(../../assets/images/login.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
