FE changes is in progress

--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -1,7 +1,8 @@
-$infinityFond : Avenir, Helvetica, Arial, sans-serif !important;
+$infinityFond : 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif !important;
 $infinityFondSize : 1rem;
 $infinityColor: #ffffff;
 $infinityBgColor: #000000;
+$fadewhite: #ffffffad;
 
 
 // colors for Throughout application blue color combination
