FE changes are in progress

--- a/src/css/_variable.scss
+++ b/src/css/_variable.scss
@@ -10,9 +10,9 @@ $fadewhite: #ffffffad;
 $darkblue: #0C0032;
 $midblue: #190061;
 $blue: #240090;
-$skyblue: #3500D3;
+$skyblue: #0047ba;
 $lightdark: #282828;
-$bluedark: #44318D;
+$bluedark: #00a1e0;
 
 
 // grey color combination
